--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 			margin: 0;
 			font-size: 0;
 		}
+		body {
+			display: flex;
+			flex-wrap: wrap;
+			gap: 2vh;
+		}
 		canvas {
 			width: 100vw;
 			max-width: 100vh;
 			height: 100vh;
 			max-height: 100vw;
 			background-color: #ccc;
-			cursor: pointer;
 		}
 		span {
 			color: black;
@@ -250,7 +254,7 @@
 			gameOver = won || lost
 			drawField(field, canvas, context, won, lost)
 			if (gameOver) {
-				span.innerHTML = `You ${ won ? 'won' : 'lost'}!  <button onclick="window.location.reload()">Play Again</button>`
+				span.innerHTML = `You ${ won ? 'won' : 'lost'}!<br/><button onclick="window.location.reload()">Play Again</button>`
 			}
 		}
 
